# mydomainlist

./: .gitignore  LICENSE  README.md  app.py  converter.py  domains.json  frames.py  messagebox.py  notes.md  openFileDialog.py  package.json  pyproject.toml  requirements.txt  utils.py
mdl/: __main__.py  converter.py  frames.py  openFileDialog.py  utils.py
mydomainlist/: README.md  app.py  converter.py  domains.json  manifest.json  requirements.txt
